# postern-community

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  mkdocs.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/email-templates/: README.md  postern-pro-welcome.html  postern-pro-welcome.txt
deploy/release-signing/: README.md  postern-release.pub
deploy/viewer/: Dockerfile  README.md  server.py
docs/: index.md  robots.txt
docs/guides/: create-pgp-key.md  gmail-app-password.md  google-drive-backup.md  index.md  pgp-keys-explained.md  pgp-keys.md  whmcs-pgp.md
docs/install/: community.md  hardening.md  home-server.md  index.md
docs/reference/: index.md  migration-from-mailpile.md  storage-invariants.md
overrides/: main.html
overrides/assets/stylesheets/: home.css
scripts/: fetch-geoip.sh
server/: Cargo.toml
server/migrations/: 0001_initial.sql  0002_fts_body_text.sql  0003_pgp_keyring.sql  0004_thread_index.sql  0005_vault.sql  0006_msg_encrypted.sql  0007_rules.sql  0008_audit_log.sql  0009_account_delete_policy.sql  0010_fix_rule_label_kind.sql  0011_audit_category.sql  0012_account_archive_folder.sql  0013_account_archive_strategy.sql  0014_account_archive_enabled.sql  0015_auto_archive.sql  0016_account_avatar.sql  0017_trusted_devices.sql  0018_message_subject_key.sql  0019_vpn_country_id.sql  0020_vpn_server_load.sql  0021_vpn_server_detail.sql  0022_retention.sql  0023_purge_gmail_categories.sql  0024_skip_gmail_trash.sql  0025_account_signature.sql  0026_outbox.sql  0027_calendar.sql  0028_reminders.sql  0029_app_meta.sql  0030_account_enabled.sql  0031_account_include_in_unified.sql  0032_backup_destinations.sql  0033_backup_destination_fingerprint.sql  0034_backup_schedule.sql  0035_strip_stale_trash_labels.sql  0036_ai.sql  0037_message_receipt_to.sql  0038_ai_settings.sql  0039_ai_embed_provider.sql  0040_ai_activity_log.sql  (+24 more)
server/scripts/: generate-schema.sh
server/src/: backup.rs  backup_destinations.rs  backup_orchestrator.rs  backup_scheduler.rs  config.rs  error.rs  gdrive.rs  main.rs  net.rs  outbox.rs  outbox_worker.rs  release_signing.rs  restore.rs  rules.rs  send.rs  smtp.rs  tier.rs
server/src/backup/: destinations.rs  gdrive.rs  local.rs  mod.rs  orchestrator.rs  restore.rs  scheduler.rs
server/src/caldav/: client.rs  discover.rs  mod.rs  parse.rs  recurrence.rs  sync.rs
server/src/http/: accounts.rs  ai.rs  api.rs  audit.rs  avatar.rs  backup.rs  body.rs  caldav.rs  contacts.rs  cookie.rs  curated.rs  folders.rs  import.rs  lockdown.rs  messages.rs  mod.rs  notes.rs  oauth_sessions.rs  outbox.rs  pgp.rs  reminders.rs  rules.rs  search.rs  send.rs  static_assets.rs  threads.rs  tier.rs  trusted_senders.rs  updates_free.rs  vault.rs
server/src/http/ai/: mod.rs  prompts.rs
server/src/http/backup/: destinations.rs  gdrive_oauth.rs  mod.rs
server/src/llm/: activity.rs  anthropic.rs  holder.rs  indexer.rs  mod.rs  ollama.rs  openai.rs  pricing.rs  provider.rs
server/src/mail/: mod.rs
server/src/pgp/: autocrypt.rs  crypto.rs  discover.rs  keyring.rs  mod.rs  publish.rs
server/src/privacy/: forensics.rs  geoip.rs  mod.rs  proxy.rs  sanitize.rs  trackers.rs
server/src/storage/: accounts.rs  ai.rs  app_meta.rs  audit.rs  auth_totp.rs  backup_destinations.rs  backup_schedule.rs  blobs.rs  calendar.rs  contacts.rs  curated.rs  db.rs  labels.rs  message_queries.rs  messages.rs  mod.rs  notes.rs  outbox.rs  reminders.rs  search_query.rs  trusted_senders.rs
server/src/sync/: auto_archive.rs  gmail_labels.rs  gmail_rescan.rs  idle.rs  imap.rs  label_policy.rs  mod.rs  parser.rs  purge.rs  scheduler.rs
server/src/vault/: crypto.rs  mod.rs  session.rs  sidecar.rs
server/src/vpn/: mod.rs
web/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.html
web/src/lib/: accountColor.test.ts  accountColor.ts  api.ts  avatar.ts  avatars.ts  bulkSelection.test.ts  bulkSelection.ts  cyberpunk.css  folderDisposal.test.ts  folderDisposal.ts  folderSemantics.test.ts  folderSemantics.ts  format.test.ts  format.ts  lockdown.ts  notifications.ts  prefs.ts  themes.css  tier.ts  unified.ts  useInboxMessages.svelte.ts  usePaneResize.svelte.ts  vault.ts
web/src/lib/api/: _client.ts  accounts.ts  ai.ts  audit.ts  backup.ts  calendar.ts  contacts.ts  folders.ts  import.ts  messages.ts  notes.ts  outbox.ts  pgp.ts  reminders.ts  rules.ts  search.ts  send.ts  totp.ts  trustedDevices.ts  trustedSenders.ts  updates.ts  vault.ts  vpn.ts
web/src/lib/components/: EventTicker.svelte  FolderIcon.svelte  FolderPicker.svelte  GrammarCheck.svelte  InfoBubble.svelte  MessageBody.svelte  MessageForensics.svelte  NotificationHost.svelte  ReceiptBanner.svelte  ReminderWatcher.svelte  RewriteSelection.svelte  RuleQuickCreate.svelte  SenderAvatar.svelte  Sidebar.svelte  ThreadView.svelte  UpdateBanner.css  UpdateBanner.svelte  UpdatesPanel.css  UpdatesPanel.svelte  VaultGate.svelte  VoiceDictate.svelte  VpnBadge.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/calendar/: +page.svelte  calendar.css
web/src/routes/compose/: +page.svelte  compose.css
web/src/routes/contacts/: +page.svelte  contacts.css
web/src/routes/curated/: +page.svelte
web/src/routes/datas/: +page.svelte
web/src/routes/inbox/: +page.svelte  styles.css
web/src/routes/notes/: +page.svelte  notes.css
web/src/routes/outbox/: +page.svelte  outbox.css
web/src/routes/reminders/: +page.svelte  reminders.css
web/src/routes/settings/: +page.svelte  styles.css
web/src/routes/setup/: +page.svelte  setup.css
www/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
www/src/: app.html
www/src/lib/: lightbox.svelte.ts  reveal.ts  site.ts  theme.svelte.ts
www/src/lib/components/: CodeBlock.svelte  FlowDiagram.svelte  Footer.svelte  Frame.svelte  Icon.svelte  Lightbox.svelte  Logo.svelte  Nav.svelte  Seo.svelte  ThemeToggle.svelte  (+1 more)
www/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
www/static/: .htaccess  robots.txt  sitemap.xml
(+166 files in other folders)
